--- a/assets/css/style_index.css
+++ b/assets/css/style_index.css
@@ -13,6 +13,7 @@ html
 body
 {
     height: 100%;
+    background-image: url(../images/clear.jpg);
     background-position: center center;
     background-size: cover;
     font-family: 'Poppins', sans-serif;
