--- a/assets/css/style_index.css
+++ b/assets/css/style_index.css
@@ -89,6 +89,11 @@ input[type="search"]::-webkit-search-results-decoration { display:none!important
 {
    font-weight: bolder!important;
    font-size: 70px;
+   transition: all 1s;
+   -webkit-transition: all 1s;
+   -moz-transition: all 1s;
+   -ms-transition: all 1s;
+   -o-transition: all 1s;
 }
 .weatherIcon
 {
@@ -103,9 +108,6 @@ h2 ,.general-weather,.searchInput
     -ms-transition: all 1s;
     -o-transition: all 1s;
 }
-
-
-
 
 
 
